# ecommerce_assistant

ecommerce_assistant/: bot_simple.py  pyproject.toml  requirements.txt
ecommerce_assistant/api/: main.py
ecommerce_assistant/models/: tfidf_vectorizer.joblib
ecommerce_assistant/recommender/: pyproject.toml  recommender.py  train_recommender.py
ecommerce_assistant/web/: simple-chat.html
web/: index.html
